--- a/views/admin-chat.hbs
+++ b/views/admin-chat.hbs
@@ -37,7 +37,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
 <script>
-    const socket = io('wss://paradise-resort-bice.vercel.app', {
+    const socket = io('https://paradise-resort-d6dba2hndmcxghgz.southeastasia-01.azurewebsites.net', {
         transports: ['websocket'],
     });
     socket.on('receichatlist', (chatList) => {
